--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
         </div>
         <div class="row main border-bottom-red center-center">
             <div class="four-col">
-                <h2 class="dark">Chattanooga, TN</h2>
-                <h1 class="dark">Earn up to $80,000</h1>
-                <a class="dark-button" href="#">Apply Now</a>
-                <a class="dark-button" href="#">123-456-7890</a>
+                <div class="inner-wrapper">
+                    <h2 class="dark">Chattanooga, TN</h2>
+                    <h1 class="dark">Truck Driver - Lease Purchase Drivers Earn Up to $150,000/yr.</h1>
+                    <a class="dark-button" href="#">Apply Now</a>
+                    <a class="dark-button" href="#">123-456-7890</a>
+                </div>
             </div>
         </div>
         <div class="row bottom">
